--- a/winstack-fragment/pom.xml
+++ b/winstack-fragment/pom.xml
@@ -36,7 +36,7 @@
         <dependency>
             <groupId>org.mybatis.generator</groupId>
             <artifactId>mybatis-generator-core</artifactId>
-            <version>1.3.5</version>
+            <version>1.3.2</version>
         </dependency>
 
         <dependency>
@@ -55,6 +55,13 @@
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis-spring</artifactId>
             <version>1.2.3</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>4.1.4</version>
         </dependency>
 
     </dependencies>
