--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,23 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>1.5.6.RELEASE</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <modules>
         <module>winstack-fragment</module>
         <module>winstack-winapp</module>
+        <module>winstack-springboot</module>
     </modules>
-
 
     <!--public denpendcy-->
     <dependencies>
@@ -25,6 +36,7 @@
             <version>1.12.6</version>
         </dependency>
     </dependencies>
+
 
 
 </project>
