--- a/winstack-winapp/pom.xml
+++ b/winstack-winapp/pom.xml
@@ -8,11 +8,19 @@
 	<packaging>jar</packaging>
 	<description>winstack-winapp</description>
 
-	<parent>
+<!--	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>1.5.6.RELEASE</version>
-	</parent>
+	</parent>-->
+
+    <parent>
+        <artifactId>winstack</artifactId>
+        <groupId>wang.wincent.winstack</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
+
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
