--- a/winstack-fragment/pom.xml
+++ b/winstack-fragment/pom.xml
@@ -13,6 +13,11 @@
     <dependencies>
 
 
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
 
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -57,11 +62,23 @@
             <version>1.2.3</version>
         </dependency>
 
-
+        <!--分页插件测试-->
         <dependency>
             <groupId>com.github.pagehelper</groupId>
             <artifactId>pagehelper</artifactId>
-            <version>4.1.4</version>
+            <version>5.1.4</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.6.7</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.6.7</version>
         </dependency>
 
     </dependencies>
